# ballista-k8s-implementation

./: Cargo.toml  Dockerfile  README.md  deploy.sh
deployment/: data-gen-job.yaml  query-runner.yaml
deployment/ballista/: Chart.yaml  values.yaml
deployment/ballista/templates/: executor-deployment.yaml  pv.yaml  pvc.yaml  scheduler-deployment.yaml  scheduler-service.yaml
deployment/ballista/templates/tests/: test-connection.yaml
src/: lib.rs
